--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
             <div class="genre">
                 <span> Donna</span>
                 <span>Uomo</span>
-                <span></span>
+                <span>Bambini</span>
             </div>
-
+            <div class="logo">
+                <img src="./assets/img/boolean-logo.png" alt="">
+            </div>
+            <div class="icon">
+               <span><i class="fa-regular fa-user"></i></span>
+               <span><i class="fa-regular fa-heart"></i></span>
+               <span><i class="fa-solid fa-bag-shopping"></i></span>
+            </div>
         </section>
     </header>
 <!------------- MAIN ---------------->
