--- a/index.html
+++ b/index.html
@@ -29,6 +29,69 @@
     </header>
 <!------------- MAIN ---------------->
     <main>
+        <section class="row flex">
+            <div class="card">
+                <div class="img">
+                    <img src="./assets/img/1.jpg" alt="" class="img-1">
+                    <!-- <img src="" alt="" class="img-1b"> -->
+                    <div class="text-img">
+                        <div class="sconto"><span>lorem</span></div>
+                        <div class="sostenibilità"><span>lorem</span></div>
+                        <div class="heart"><span><i class="fa-solid fa-heart"></i></span></div>
+                    </div>
+                </div>
+                <p class="text-info">
+                    <span class="marchio">lorem</span>
+                    <span class="capo-tipo">lorem</span>
+                    <span class="prezzo-scontato">lorem</span>
+                    <span class="prezzo-originale">lorem</span>
+                </p>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./assets/img/1.jpg" alt="" class="img-1">
+                    <!-- <img src="" alt="" class="img-1b"> -->
+                    <div class="text-img">
+                        <div class="sconto"><span>lorem</span></div>
+                        <div class="sostenibilità"><span>lorem</span></div>
+                        <div class="heart"><span><i class="fa-solid fa-heart"></i></span></div>
+                    </div>
+                </div>
+                <p class="text-info">
+                    <span class="marchio">lorem</span>
+                    <span class="capo-tipo">lorem</span>
+                    <span class="prezzo-scontato">lorem</span>
+                    <span class="prezzo-originale">lorem</span>
+                </p>
+            </div>
+            <div class="card">
+                <div class="img">
+                    <img src="./assets/img/1.jpg" alt="" class="img-1">
+                    <!-- <img src="" alt="" class="img-1b"> -->
+                    <div class="text-img">
+                        <div class="sconto"><span>lorem</span></div>
+                        <div class="sostenibilità"><span>lorem</span></div>
+                        <div class="heart"><span><i class="fa-solid fa-heart"></i></span></div>
+                    </div>
+                </div>
+                <p class="text-info">
+                    <span class="marchio">lorem</span>
+                    <span class="capo-tipo">lorem</span>
+                    <span class="prezzo-scontato">lorem</span>
+                    <span class="prezzo-originale">lorem</span>
+                </p>
+            </div>
+        </section>
+
+
+
+
+
+
+        <section class="row">
+
+        </section>
+
 
     </main>
 <!------------- FOOTER -------------->
